--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
     "name"       : "rollup-config-builder",
     "version"    : "0.1.0",
     "main"       : "index.js",
-    "repository" : ,
     "license"    : "MIT",
     "author"     : "Donovan Lambert <d.lambert@cirize.com>",
     "repository" : {
@@ -16,6 +15,12 @@
         "rollup-plugin-commonjs"     : "^8.0.2",
         "rollup-plugin-node-resolve" : "^3.0.0",
         "rollup-plugin-progress"     : "^0.4.0",
-        "rollup-plugin-uglify"       : "^2.0.1"
+        "rollup-plugin-uglify"       : "^2.0.1",
+        "uglify-es"                  : "^3.0.21"
+    },
+    "devDependencies": {
+        "eslint"                    : "^3.19.0",
+        "eslint-config-airbnb-base" : "^11.2.0",
+        "eslint-plugin-import"      : "^2.6.1"
     }
 }
