--- a/package.json
+++ b/package.json
@@ -1,14 +1,11 @@
 {
-    "name"       : "rollup-config-builder",
-    "version"    : "0.2.0",
-    "main"       : "index.js",
-    "license"    : "MIT",
-    "author"     : "Donovan Lambert <d.lambert@cirize.com>",
-    "repository" : {
-        "type" : "git",
-        "url"  : "git@github.com:Donov4n/rollup-config-builder.git"
-    },
-    "dependencies": {
+    "name"         : "rollup-config-builder",
+    "version"      : "0.3.0",
+    "main"         : "index.js",
+    "license"      : "MIT",
+    "author"       : "Donovan Lambert <d.lambert@cirize.com>",
+    "repository"   : "git@github.com:Donov4n/rollup-config-builder.git",
+    "dependencies" : {
         "babel-plugin-external-helpers" : "^6.22.0",
         "babelrc-targeted-rollup"       : "^0.1.0",
         "rollup-plugin-babel"           : "^2.7.1",
@@ -18,11 +15,11 @@
         "rollup-plugin-node-resolve"    : "^3.0.0",
         "rollup-plugin-progress"        : "^0.4.0",
         "rollup-plugin-uglify"          : "^2.0.1",
-        "uglify-es"                     : "^3.0.21"
+        "uglify-es"                     : "^3.0.27"
     },
     "devDependencies": {
-        "eslint"                    : "^3.19.0",
-        "eslint-config-airbnb-base" : "^11.2.0",
-        "eslint-plugin-import"      : "^2.6.1"
+        "eslint"                    : "^4.3.0",
+        "eslint-config-airbnb-base" : "^11.3.1",
+        "eslint-plugin-import"      : "^2.7.0"
     }
 }
