--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
-    "name"         : "rollup-config-builder",
-    "version"      : "0.3.0",
-    "main"         : "index.js",
-    "license"      : "MIT",
-    "author"       : "Donovan Lambert <d.lambert@cirize.com>",
-    "repository"   : "git@github.com:Donov4n/rollup-config-builder.git",
+    "name"       : "rollup-config-builder",
+    "version"    : "0.3.0",
+    "main"       : "index.js",
+    "license"    : "MIT",
+    "author"     : "Donovan Lambert <d.lambert@cirize.com>",
+    "repository" : "git@github.com:Donov4n/rollup-config-builder.git",
+    "scripts"    : {
+        "lint": "eslint --max-warnings 0 --ext .js ."
+    },
     "dependencies" : {
         "babel-plugin-external-helpers" : "^6.22.0",
         "babelrc-targeted-rollup"       : "^0.1.0",
