--- a/package.json
+++ b/package.json
@@ -8,21 +8,23 @@
     "scripts"    : {
         "lint": "eslint --max-warnings 0 --ext .js ."
     },
-    "dependencies" : {
+    "dependencies": {
+        "babel-core"                    : "^6.26.0",
         "babel-plugin-external-helpers" : "^6.22.0",
-        "babelrc-targeted-rollup"       : "^0.1.0",
-        "rollup-plugin-babel"           : "^2.7.1",
+        "babelrc-targeted-rollup"       : "^0.1.2",
+        "lodash.merge"                  : "^4.6.0",
+        "rollup-plugin-babel"           : "^3.0.2",
         "rollup-plugin-cleanup"         : "^1.0.1",
-        "rollup-plugin-commonjs"        : "^8.0.2",
+        "rollup-plugin-commonjs"        : "^8.2.1",
         "rollup-plugin-json"            : "^2.3.0",
         "rollup-plugin-node-resolve"    : "^3.0.0",
         "rollup-plugin-progress"        : "^0.4.0",
         "rollup-plugin-uglify"          : "^2.0.1",
-        "uglify-es"                     : "^3.0.27"
+        "uglify-es"                     : "^3.1.0"
     },
     "devDependencies": {
-        "eslint"                    : "^4.3.0",
-        "eslint-config-airbnb-base" : "^11.3.1",
+        "eslint"                    : "^4.6.1",
+        "eslint-config-airbnb-base" : "^12.0.0",
         "eslint-plugin-import"      : "^2.7.0"
     }
 }
