--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
         "rollup-plugin-uglify"          : "^2.0.1",
         "uglify-es"                     : "^3.1.0"
     },
+    "peerDependencies": {
+        "rollup": "^0.49.3"
+    },
     "devDependencies": {
         "eslint"                    : "^4.6.1",
         "eslint-config-airbnb-base" : "^12.0.0",
