--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "dependencies": {
         "babel-core"                    : "^6.26.0",
         "babel-plugin-external-helpers" : "^6.22.0",
-        "babelrc-targeted-rollup"       : "^0.1.2",
+        "babelrc-rollup"                : "^3.0.0",
         "lodash.merge"                  : "^4.6.0",
         "rollup-plugin-babel"           : "^3.0.2",
         "rollup-plugin-cleanup"         : "^1.0.1",
