--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     },
     "dependencies": {
         "babel-core"                    : "^6.26.0",
+        "babel-helpers"                 : "^6.24.1",
         "babel-plugin-external-helpers" : "^6.22.0",
         "babelrc-rollup"                : "^3.0.0",
         "lodash.merge"                  : "^4.6.0",
