--- a/package.json
+++ b/package.json
@@ -1,34 +1,33 @@
 {
-    "name"       : "rollup-config-builder",
-    "version"    : "0.6.0",
-    "main"       : "index.js",
-    "license"    : "MIT",
-    "author"     : "Donovan Lambert <d.lambert@cirize.com>",
-    "repository" : "git@github.com:Donov4n/rollup-config-builder.git",
-    "scripts"    : {
+    "name": "rollup-config-builder",
+    "version": "0.6.0",
+    "main": "index.js",
+    "license": "MIT",
+    "author": "Donovan Lambert <d.lambert@cirize.com>",
+    "repository": "git@github.com:Donov4n/rollup-config-builder.git",
+    "scripts": {
         "lint": "eslint --max-warnings 0 --ext .js ."
     },
     "dependencies": {
-        "babel-core"                    : "^6.26.0",
-        "babel-helpers"                 : "^6.24.1",
-        "babel-plugin-external-helpers" : "^6.22.0",
-        "babelrc-rollup"                : "^3.0.0",
-        "lodash.merge"                  : "^4.6.0",
-        "rollup-plugin-babel"           : "^3.0.2",
-        "rollup-plugin-cleanup"         : "^1.0.1",
-        "rollup-plugin-commonjs"        : "^8.2.1",
-        "rollup-plugin-json"            : "^2.3.0",
-        "rollup-plugin-node-resolve"    : "^3.0.0",
-        "rollup-plugin-progress"        : "^0.4.0",
-        "rollup-plugin-uglify"          : "^2.0.1",
-        "uglify-es"                     : "^3.1.0"
-    },
-    "peerDependencies": {
-        "rollup": "^0.50.0"
+        "babel-core": "^6.26.0",
+        "babel-helpers": "^6.24.1",
+        "babel-plugin-external-helpers": "^6.22.0",
+        "babel-plugin-transform-runtime": "^6.23.0",
+        "babelrc-rollup": "^3.0.0",
+        "lodash.merge": "^4.6.0",
+        "rollup": "^0.55.3",
+        "rollup-plugin-babel": "^3.0.2",
+        "rollup-plugin-babel-minify": "^4.0.0",
+        "rollup-plugin-cleanup": "^2.0.0",
+        "rollup-plugin-commonjs": "^8.2.1",
+        "rollup-plugin-json": "^2.3.0",
+        "rollup-plugin-node-resolve": "^3.0.0",
+        "rollup-plugin-progress": "^0.4.0"
     },
     "devDependencies": {
-        "eslint"                    : "^4.6.1",
-        "eslint-config-airbnb-base" : "^12.0.0",
-        "eslint-plugin-import"      : "^2.7.0"
-    }
+        "eslint": "^4.6.1",
+        "eslint-config-airbnb-base": "^12.0.0",
+        "eslint-plugin-import": "^2.7.0"
+    },
+    "peerDependencies": {}
 }
