--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
     "name": "rollup-config-builder",
     "version": "0.6.0",
-    "main": "index.js",
+    "main": "src/index.js",
     "license": "MIT",
     "author": "Donovan Lambert <d.lambert@cirize.com>",
     "repository": "git@github.com:Donov4n/rollup-config-builder.git",
     "scripts": {
         "lint": "eslint --max-warnings 0 --ext .js ."
+    },
+    "bin": {
+        "rollup-bundler": "./index.js"
     },
     "dependencies": {
         "babel-core": "^6.26.0",
@@ -15,6 +18,7 @@
         "babel-plugin-transform-runtime": "^6.23.0",
         "babelrc-rollup": "^3.0.0",
         "lodash.merge": "^4.6.0",
+        "pascal-case": "^2.0.1",
         "rollup": "^0.55.3",
         "rollup-plugin-babel": "^3.0.2",
         "rollup-plugin-babel-minify": "^4.0.0",
